log
Thu Mar 17 22:47:18 UTC 2022: 
 tests:  0|6
total_score: 0/70
76f3d64
Thu Mar 17 22:47:53 UTC 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
4db3dd2
Thu Mar 17 22:48:33 UTC 2022: 
 list.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘firstList’:
list.c:41:6: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   if(lista->head==NULL){
      ^~~~~
      list
list.c:41:6: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘nextList’:
list.c:52:6: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   if(lista->current==NULL || lista->current->next==NULL){
      ^~~~~
      list
Compilation failed
d0a58d1
Thu Mar 17 22:49:18 UTC 2022: 
 list.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  0|0
7ec77c0
Thu Mar 17 22:50:57 UTC 2022: 
 list.c | 40 ++++++++++++++++++++--------------------
 1 file changed, 20 insertions(+), 20 deletions(-)
 tests:  0|0
ac3af56
Thu Mar 17 22:52:12 UTC 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
412e038
Thu Mar 17 22:53:46 UTC 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
74c8a6f
Thu Mar 17 22:54:22 UTC 2022: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  0|0
f61984b
Thu Mar 17 22:59:23 UTC 2022: 
 list.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|0
2e75d0c
Thu Mar 17 23:00:40 UTC 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
c129db7
